--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,7 +1,7 @@
 @import "../../css-config/mixins.scss";
 
 .layout{
-    max-width: 1400px;
-    // width: 65%;
+    // max-width: 1400px;
+    width: 85%;
     margin: 0 auto;
 }
